# 3D-Kart

3DCG_siala_jacob_meloux/: .gitignore  README  plan
3DCG_siala_jacob_meloux/include/: CubeRenderable.hpp  CylinderRenderable.hpp  HierarchicalTorusRenderable.hpp  KeyframeCollection.hpp  MeshRenderable.hpp  SphereRenderable.hpp
3DCG_siala_jacob_meloux/include/dynamics/: ConstantForceField.hpp  ControlledForceFieldRenderable.hpp  DampingForceField.hpp  DynamicSystemRenderable.hpp  EulerExplicitSolver.hpp  Kart.hpp  KartKartCollision.hpp  KartRenderable.hpp
3DCG_siala_jacob_meloux/shaders/: textureFragment.glsl
3DCG_siala_jacob_meloux/src/: CubeRenderable.cpp  CylinderRenderable.cpp  KeyframeCollection.cpp  MeshRenderable.cpp  main.cpp
3DCG_siala_jacob_meloux/src/dynamics/: ConstantForceFieldRenderable.cpp  ControlledForceFieldRenderable.cpp  DampingForceField.cpp  Kart.cpp  KartRenderable.cpp  Solver.cpp
Projet/: .gitignore  TODO
Projet/include/: Bezier.hpp  CylinderRenderable.hpp  GeometricTransformation.hpp  KeyframedKartRenderable.hpp  Utils.hpp  Viewer.hpp  project_scene.hpp
Projet/include/dynamics/: ControlledForceFieldRenderable.hpp  DynamicSystem.hpp  ForceField.hpp  Kart.hpp  KartPlaneCollision.hpp  KartRenderable.hpp  Solver.hpp
Projet/include/texturing/: TexturedLightedMeshRenderable.hpp  TexturedPlaneRenderable.hpp
Projet/src/: CylinderRenderable.cpp  HierarchicalTorusRenderable.cpp  KeyframeCollection.cpp  KeyframedKartRenderable.cpp  SphereRenderable.cpp  Utils.cpp  main.cpp  project_scene.cpp  readme
Projet/src/dynamics/: ConstantForceField.cpp  ControlledForceFieldRenderable.cpp  DynamicSystem.cpp  DynamicSystemRenderable.cpp  EulerExplicitSolver.cpp  Kart.cpp  KartKartCollision.cpp  KartPlaneCollision.cpp  KartRenderable.cpp
Projet/struct/: Personnage
practical1/: CMakeLists.txt
practical1/extlib/glew-1.13.0/lib/: libGLEW.so.1.13.0  libGLEWmx.so.1.13.0
practical1/include/: Camera.hpp  CubeRenderable.hpp  CylinderRenderable.hpp  FrameRenderable.hpp  HierarchicalRenderable.hpp  IndexedCubeRenderable.hpp  Io.hpp  MeshRenderable.hpp  Renderable.hpp  ShaderProgram.hpp  Utils.hpp  Viewer.hpp  gl_helper.hpp
practical1/shaders/: .flatFragment.glsl.swp  flatFragment.glsl  flatVertex.glsl
practical1/src/: :  CubeRenderable.cpp  CylinderRenderable.cpp  FrameRenderable.cpp  HierarchicalRenderable.cpp  IndexedCubeRenderable.cpp  MeshRenderable.cpp  Renderable.cpp  Utils.cpp  Viewer.cpp  main.cpp
practical4/: CMakeLists.txt
practical4/include/: Camera.hpp  HierarchicalRenderable.hpp  Utils.hpp
practical4/src/: CubeRenderable.cpp  CylinderRenderable.cpp  HierarchicalRenderable.cpp  KeyframeCollection.cpp  Renderable.cpp  Utils.cpp  Viewer.cpp  main.cpp  main.cpp~  practical_04_scene.cpp
practical5/: CMakeLists.txt
practical5/include/: Utils.hpp  Viewer.hpp  practical_04_scene.hpp
practical5/src/: HierarchicalMeshRenderable.cpp  Io.cpp  MeshRenderable.cpp  Renderable.cpp  TextEngine.cpp  Utils.cpp  Viewer.cpp  main.cpp  practical_05_scene.cpp
practical6/include/: Renderable.hpp  Viewer.hpp  practical_06_scene.hpp
practical6/shaders/: phongFragment.glsl
practical6/src/: Viewer.cpp  main.cpp  practical_06_scene.cpp
practical7/: extlib
practical7/shaders/: phongFragment.glsl
practical7/src/: Viewer.cpp  main.cpp  practical_07_scene.cpp
solution_practical1/: CubeRenderable.cpp  CubeRenderable.hpp  IndexedCubeRenderable.cpp  IndexedCubeRenderable.hpp  README  flatVertex.glsl
(+6 files in other folders)
